--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.17.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.5"
   }
 }
